// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export yaml - flat 1`] = `
{
  "a.hello": "hello",
  "a.submit": "Submit Button",
  "a.world": "world",
  "b.hello": "hello",
  "b.world": "world",
}
`;

exports[`export yaml - flat 2`] = `
{
  "a.hello": "",
  "a.submit": "",
  "a.world": "",
  "b.hello": "",
  "b.world": "",
}
`;

exports[`export yaml 1`] = `
{
  "a": {
    "hello": "hello",
    "submit": "Submit Button",
    "world": "world",
  },
  "b": {
    "hello": "hello",
    "world": "world",
  },
}
`;

exports[`export yaml 2`] = `
{
  "a": {
    "hello": "",
    "submit": "",
    "world": "",
  },
  "b": {
    "hello": "",
    "world": "",
  },
}
`;

exports[`exsit yaml 1`] = `
{
  "a": {
    "hello": "hello",
    "submit": "Submit Button",
    "world": "world",
  },
  "b": {
    "hello": "hello",
    "world": "world",
  },
}
`;

exports[`exsit yaml 2`] = `
{
  "a": {
    "hello": "hello2",
    "submit": "",
    "world": "",
  },
  "b": {
    "hello": "",
    "world": "",
  },
}
`;
